--- a/.env.local
+++ b/.env.local
@@ -3,3 +3,4 @@ MONGODB_URI=mongodb+srv://khanrobin7071:Robin54321@cluster0.eea47yy.mongodb.net/
 CLOUDINARY_CLOUD_NAME=dmjnssvi4
 CLOUDINARY_API_KEY=951485347621499
 CLOUDINARY_API_SECRET=lmZ6cZP-hsbIgw3Emf1YndIDD2g
+GEMINI_API_KEY=AIzaSyBt7DBMrV3OCm8uHZM7tAUkqqgCcyHeYQM
